# rivetsql

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  index.html  mise.toml  mkdocs.yml
rivet/: CHANGELOG.md  README.md  pyproject.toml
rivet/docs/bugfixes/: cte-fusion-multiple-with.md
rivet/scripts/: audit_dependencies.py  check_module_boundaries.py  check_plugin_coherence.py  find_dead_code.py  flag_stale_docs.py
rivet/src/rivet_aws/: README.md  __init__.py  credentials.py  errors.py  glue_catalog.py  glue_sink.py  glue_source.py  pyproject.toml  s3_catalog.py  s3_sink.py  s3_source.py
rivet/src/rivet_bridge/: __init__.py  builder.py  catalogs.py  converter.py  declarations.py  decomposer.py  engines.py  errors.py  forward.py  models.py  plugins.py  profiles.py  reverse.py  roundtrip.py  sql_gen.py  upstream.py
rivet/src/rivet_cli/: __init__.py  app.py  errors.py  exit_codes.py  metrics.py
rivet/src/rivet_config/: __init__.py  annotations.py  declarations.py  env.py  errors.py  manifest.py  models.py  profiles.py  python_parser.py  quality.py  sql_parser.py  yaml_parser.py
rivet/src/rivet_core/: __init__.py  assembly.py  async_utils.py  catalog_explorer.py  checks.py  compiler.py  context.py  credentials.py  errors.py  executor.py  formats.py  fuzzy.py  introspection.py  lineage.py  logging.py  metrics.py  models.py  optimizer.py  plugins.py  smart_cache.py  sql_parser.py  sql_resolver.py  stats.py  strategies.py  type_parser.py  watermark.py  write_strategies.py
rivet/src/rivet_databricks/: README.md  __init__.py  auth.py  client.py  databricks_catalog.py  databricks_cross_joint.py  databricks_sink.py  databricks_source.py  engine.py  pyproject.toml  unity_catalog.py  unity_sink.py  unity_source.py
rivet/src/rivet_duckdb/: README.md  __init__.py  catalog.py  engine.py  extensions.py  filesystem_sink.py  pyproject.toml  sink.py  source.py
rivet/src/rivet_polars/: README.md  __init__.py  engine.py  pyproject.toml
rivet/src/rivet_postgres/: README.md  __init__.py  catalog.py  cross_joint.py  engine.py  errors.py  pyproject.toml  sink.py  source.py
rivet/src/rivet_pyspark/: README.md  __init__.py  engine.py  pyproject.toml
rivet/src/rivet_rest/: README.md  __init__.py  adapter.py  auth.py  catalog.py  flatten.py  pagination.py  predicate_mapper.py  pyproject.toml  rate_limit.py  sink.py  source.py
rivet/tests/: __init__.py  conftest.py  test_adapter_dispatch_integration.py  test_adapter_precedence_properties.py  test_cross_joint_registry.py  test_cross_plugin.py  test_error_scenarios.py  test_execute_via_plugin.py  test_lifecycle_properties.py  test_option_validation_properties.py  test_plugin_registration.py  test_plugin_structured_errors.py  test_plugins_properties.py  test_resolve_cross_joint.py  test_spec_alignment_properties.py  test_spec_alignment_unit.py  test_unsupported_cross_engine_rvt502.py  test_write_strategy_declaration_properties.py
rivet/tests/aws/: test_aws_credentials.py  test_aws_error_mapping.py  test_connection_failure_handling.py  test_credential_caching_property.py  test_credential_resolution_order_property.py  test_glue_catalog_plugin.py  test_glue_list_children_hierarchy_property.py  test_glue_parallel_list_tables_properties.py  test_glue_partition_metadata_consistency_property.py  test_glue_schema_consistency_property.py  test_glue_sink_plugin.py  test_glue_sink_write_strategy_property.py  test_glue_source_plugin.py  test_merge_scd2_requires_delta_property.py  test_s3_catalog_plugin.py  test_s3_invalid_format_property.py  test_s3_list_children_property.py  test_s3_parquet_schema_roundtrip_property.py  test_s3_partition_metadata_property.py  test_s3_sink_plugin.py  test_s3_sink_write_strategy_property.py  test_s3_source_plugin.py  test_schema_roundtrip.py
rivet/tests/bridge/: conftest.py  test_builder.py  test_catalogs.py  test_converter.py  test_declarations.py  test_decomposer.py  test_engines.py  test_errors.py  test_forward.py  test_profiles.py  test_reverse.py  test_roundtrip.py  test_samples.py  test_sql_gen.py  test_upstream.py
rivet/tests/cli/: conftest.py  test_app.py  test_catalog_cache.py  test_catalog_create.py  test_catalog_create_engine_helpers.py  test_catalog_create_noninteractive.py  test_catalog_create_props.py  test_catalog_create_wiring.py  test_catalog_create_wizard.py  test_catalog_create_write.py  test_catalog_describe.py  test_catalog_json.py  test_catalog_list.py  test_catalog_panel.py  test_catalog_panel_enter_preview.py  test_catalog_panel_extract.py  test_catalog_panel_preview.py  test_cli_catalog.py  test_cli_explore.py  test_command_input.py  test_command_palette.py  test_compile_cmd.py  test_debug_screen.py  test_doctor_cmd.py  test_editor_cache.py  test_editor_cache_restore_on_startup.py  test_editor_validation_dialect.py  test_engine_selector.py  test_errors.py  test_execution_wiring.py  test_exit_codes.py  test_export_screen.py  test_extracted_sql_executable.py  test_file_watcher.py  test_generate_command.py  test_help_screen.py  test_history_screen.py  test_init_command.py  test_joint_preview_handler.py  test_joint_preview_metadata_property.py  (+23 more)
rivet/tests/config/: test_annotation_property.py  test_annotations.py  test_annotations_property.py  test_annotations_python.py  test_config_loader.py  test_declaration_name_uniqueness_property.py  test_declaration_quality_ordering_property.py  test_declarations.py  test_declarations_file_discovery_property.py  test_declarations_ordering_property.py  test_env.py  test_errors.py  test_manifest.py  test_models.py  test_profiles.py  test_profiles_completeness_property.py  test_profiles_format_equivalence.py  test_profiles_non_overlapping_property.py  test_profiles_required_fields_property.py  test_profiles_selection_property.py  test_quality.py  test_quality_argument_parsing_property.py  test_quality_dedicated_file_targeting_property.py  test_quality_file_classification_property.py  test_quality_multi_file_merge_property.py  (+9 more)
(+452 files in other folders)
