[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivetsql-aws"
version = "0.1.6"
description = "S3 and Glue plugin for Rivet SQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rivet Contributors" }]
keywords = ["rivet", "aws", "s3", "glue", "sql", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "rivetsql==0.1.6",
    "boto3>=1.28",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/rivetsql/rivetsql"
Repository = "https://github.com/rivetsql/rivetsql"

[project.entry-points."rivet.plugins"]
aws = "rivet_aws:AWSPlugin"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "rivet_aws"}
