[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivetsql-duckdb"
version = "1.0.0"
description = "DuckDB plugin for Rivet SQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rivet Contributors" }]
keywords = ["rivet", "duckdb", "sql", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "rivetsql>=0.1.0",
    "duckdb>=0.9",
]

[project.urls]
Homepage = "https://github.com/rivetsql/rivetsql"
Repository = "https://github.com/rivetsql/rivetsql"

[project.entry-points."rivet.plugins"]
duckdb = "rivet_duckdb:DuckDBPlugin"

[tool.hatch.build.targets.wheel]
packages = ["rivet_duckdb"]
