[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivetsql-polars"
version = "0.1.3"
description = "Polars plugin for Rivet SQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rivet Contributors" }]
keywords = ["rivet", "polars", "sql", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "rivetsql>=0.1.0",
    "polars>=0.20",
]

[project.optional-dependencies]
delta = ["deltalake>=0.14"]

[project.urls]
Homepage = "https://github.com/rivetsql/rivetsql"
Repository = "https://github.com/rivetsql/rivetsql"

[project.entry-points."rivet.plugins"]
polars = "rivet_polars:PolarsPlugin"

[tool.hatch.build.targets.wheel]
packages = ["rivet_polars"]
