[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivetsql-postgres"
version = "0.1.12"
description = "PostgreSQL plugin for Rivet SQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rivet Contributors" }]
keywords = ["rivet", "postgres", "sql", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "rivetsql>=0.1.0,<0.2.0",
    "psycopg[binary,pool]>=3.1",
]

[project.urls]
Homepage = "https://github.com/rivetsql/rivetsql"
Repository = "https://github.com/rivetsql/rivetsql"

[project.entry-points."rivet.plugins"]
postgres = "rivet_postgres:PostgresPlugin"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "rivet_postgres"}
