[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivetsql-pyspark"
version = "0.1.7"
description = "PySpark plugin for Rivet SQL"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rivet Contributors" }]
keywords = ["rivet", "pyspark", "sql", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "rivetsql==0.1.7",
    "pyspark>=3.3",
]

[project.urls]
Homepage = "https://github.com/rivetsql/rivetsql"
Repository = "https://github.com/rivetsql/rivetsql"

[project.entry-points."rivet.plugins"]
pyspark = "rivet_pyspark:PySparkPlugin"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "rivet_pyspark"}
